Correction font-size texte collapse

--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -28,7 +28,7 @@
   width: calc(100% - 30px);
   background-color: #f6f6f6;
   color: #ff6060;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 400;
   margin-bottom: 30px;
 }
